Edited wiki page Example1 through web user interface.

--- a/wiki/Example1.wiki
+++ b/wiki/Example1.wiki
@@ -4,6 +4,7 @@
 
 Sample of code using core services.
 
+`DemoClient.groovy:`
 {{{
 import org.feiteira.bigstructure.BigSClient
 import org.feiteira.bigstructure.core.EchoRequest
