--- a/wiki/Example1.wiki
+++ b/wiki/Example1.wiki
@@ -6,36 +6,39 @@ Sample of code using core services.
 
 `DemoClient.groovy:`
 {{{
-import org.feiteira.bigstructure.BigSClient
+import org.feiteira.bigstructure.client.BigSClient
 import org.feiteira.bigstructure.core.EchoRequest
+import org.feiteira.bigstructure.client.EPU
 import org.feiteira.bigstructure.core.EchoResponse
 
 class DemoClient extends BigSClient {
 	@Override
 	public void Main() {
-		requestEPUBlocking("/echo");// ensures that the host node /<id>/echo exists (or takes the current one if available)
-		
-				
-		//takes some arguments
-		int count = arguments[1].toInteger()
-		String value = arguments[2]
-		
-		EPU echo = epu("/echo");
+			requestEPUBlocking("/echo");// ensures that the host node /<id>/echo exists (or takes the current one if available)  
+                                
+            //takes some arguments
+            int count = arguments[1].toInteger()
+            String value = arguments[2]
+                
+            EPU echo = epu("/echo");
 
-		EchoResponse out;
-		while(count>0){
-			echo.request(new EchoRequest(value));
-			out = read("/echo");		
-			printf "[%d]ECHO: %s\n" , [count,out.getValue()] as Object[]
-			count--;
-			sleep 1000
-		}			
+            EchoResponse out;
+            while(count>0){
+                 echo.request(new EchoRequest(value));
+                 out = echo.getResponse();            
+                 printf "[%d]ECHO: %s\n" , [count,out.getValue()] as Object[]
+                 count--;
+                 sleep 1000
+            }                       
 	}
 }
 }}}
 
-Command line: `java -jar BigSTRUCTURE-0.4.jar Client DemoClient.groovy 10 Test!`
 
+
+Command line: `java -jar BigSTRUCTURE-0.5.jar Client DemoClient.groovy 10 Test!`
+
+_Note:_ don't forget to run `java -jar BigSTRUCTURE-0.5.jar Server` on another shell on the side
 
 Output:
 {{{
